# lmstudiomobile

./: .gitignore  LOGGING_GUIDE.md  PROJECT_STATUS.md  README.md  SETUP.md  build.gradle.kts  newlogsfortheprompt.txt  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/cpp/: llama_jni.cpp
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  opengl_backend.cpp  performance_monitor.cpp  vulkan_backend.cpp
app/src/main/java/com/lmstudio/mobile/: LMStudioApplication.kt  MainActivity.kt
app/src/main/java/com/lmstudio/mobile/data/mapper/: ChatMapper.kt  FolderMapper.kt  MessageMapper.kt  ModelMapper.kt
app/src/main/java/com/lmstudio/mobile/data/repository/: ChatRepository.kt  DownloadRepository.kt  FolderRepository.kt  ModelRepository.kt
app/src/main/java/com/lmstudio/mobile/di/: AppModule.kt  DatabaseModule.kt  LLMModule.kt  NetworkModule.kt
app/src/main/java/com/lmstudio/mobile/domain/model/: Chat.kt  DeviceCapabilities.kt  Folder.kt  LLMModel.kt  Message.kt  ModelFormat.kt  SystemMetrics.kt
app/src/main/java/com/lmstudio/mobile/llm/acceleration/: AccelerationManager.kt
app/src/main/java/com/lmstudio/mobile/llm/engine/: LLMEngine.kt  LlamaCppEngine.kt
app/src/main/java/com/lmstudio/mobile/server/: LocalApiServer.kt
app/src/main/java/com/lmstudio/mobile/service/: DownloadManager.kt  DownloadService.kt  ModelInferenceService.kt  ServerService.kt
app/src/main/java/com/lmstudio/mobile/util/: DeviceUtils.kt  NetworkUtils.kt  ResourceMonitor.kt
app/src/main/res/values/: strings.xml  themes.xml
(+39 files in other folders)
